--- a/.env.example
+++ b/.env.example
@@ -26,7 +26,7 @@ DB_HOST=mysql
 DB_PORT=3306
 DB_DATABASE=test
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=default_password
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
